# stockcentric-artifacts

./: LICENSE  README.md  RELEASE_CHECK_2026-07-19.md  RELEASE_CHECK_2026-07-23_excel-defined-name-collision.md  RELEASE_CHECK_2026-07-23_fundamental-header.md  RELEASE_CHECK_2026-07-23_investing-briefs.md  RELEASE_CHECK_2026-07-23_parquet-reader-compatibility.md  RELEASE_CHECK_2026-07-23_tool-call-contract.md  RELEASE_CHECK_2026-07-24_reusable-workflow-oidc-trust.md  SECURITY.md  manifest.json  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
stockcentric_artifacts/: __init__.py  validate.py
tests/: test_assets.py
