[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "stockcentric-artifacts"
version = "0.1.0"
description = "Integrity checks for versioned Stockcentric social artifacts"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["stockcentric_artifacts"]
